# ProRes-WASM-encoder

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  DEVELOPMENT.md  README.md  package-lock.json  package.json  rollup.config.js  test_native
.claude/: launch.json
benchmark/: .gitignore  README.md  bench-common.mjs  bench-ffmpegwasm.mjs  bench-native.mjs  bench-ours.mjs  ours-worker.mjs  package-lock.json  package.json  plot.py  prepare-footage.mjs  run-all.mjs  summarize.mjs
benchmark/browser/: bench.html  bench.js  ffworker.js  serve.mjs
benchmark/results/: results.csv  results.json  results_browser.csv
docs/: webgpu-acceleration.md
lib/: framerate.js  index.d.ts  index.js  mediabunny.d.ts  mediabunny.js  parallel.d.ts  parallel.js  pool-worker.js  pool.js  wasm-loader.js
src/encoder/: prores_dct.c  prores_dct.h  prores_encoder.c  prores_encoder.h  prores_vlc.c  prores_vlc.h
src/muxer/: mov_muxer.c  mov_muxer.h
src/wasm/: bindings.c
test/: README.md  index.html  mediabunny.html  mediabunny.test.mjs  ref_prores.mov  test_dct  test_dct_ref  test_native  test_native.c  test_output.mov  test_vlc  test_vlc.c  test_wasm_sequences.html
test/demos/: index.html
test/scripts/: analyze_results.sh  encode_ffmpeg.sh  encode_native.sh  generate_reports.sh  run_test_suite.sh  sequences.conf
test/src/: test_4444_alpha.c  test_dct.c  test_dct_ref.c  test_debug_slice.c  test_native.c  test_png_sequences.c  test_profiles.c
